Fixing next fixture in pick team visual bug